web/sass/_legacy_layout.scss
#header
{
    height: 70px;
    margin-bottom: 0px;
}

div#wrapper{float:right;width:100%;margin-left:-200px}

div#extra{float:left;clear:left;width:140px}

div#footer
{
  clear:both;
  width:100%;
  padding-top: 20px;
}

div#footer p
{
  text-align:left;
  border-top: 1px solid #CCC;
}

div#navigation
{
  opacity: .2;
}

div#navigation:hover
{
  opacity: 1;
}

@media print
{
  #footer
  {
    display: none !important;
  }
}

